Blog 1.4.5

	* [Bug] Fixed the facebook integration for existing articles.  This was broken for articles that were
	  created as draft and later set to published.
	* Merged the create and update templates together for sake of reducing code duplication.
	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 17:19:47 -0400

Blog 1.4.4

	* Updated blog to work with 2.5.6
	-- Charlie Powell <charlie@eval.bz>  Wed, 05 Jun 2013 04:58:37 -0400

Blog 1.4.3

	* Updated the test suite so it completes.
	-- Charlie Powell <charlie@eval.bz>  Mon, 01 Apr 2013 20:27:43 -0400

Blog 1.4.2

	* [Bug] Fixed bug #321 - News update items are showing up in the left nav
	* Updated the dependencies to be more accurate. (Needed to require jQuery for the new frontend
	  pagination).
	-- Charlie Powell <charlie@eval.bz>  Mon, 25 Mar 2013 05:11:39 -0400

Blog 1.4.1

	* [Bug] Fixed some minor glitches with the published date if it's still in draft.
	* Additional control links throughout the blog system.
	* New shortcut methods for publishing articles.
	* Switched default article status to draft instead of published.
	* Minor styling tweaks.
	-- Charlie Powell <charlie@eval.bz>  Wed, 20 Feb 2013 16:48:08 -0500

Blog 1.4.0

	* [Feature] Added a published date to blog articles.  This date is the date the article is switched
	  from draft to published.
	* New styles for blogs.
	* New javascript for blogs, infitite scrolling of blog listing pages via waypoint.
	* New view for blogs, /blogs.  This is a complete syndicate of all blogs on the site and their
	  articles.
	* Expanded the admin section of /blogs/admin for super admins.  This now displays the individual
	  articles in a data-friendly view.
	* Removed the BlogArticleTagModel; this was never implemented.
	* Blog articles now record their own page, but are not selectable via the new selectable option.
	-- Charlie Powell <charlie@eval.bz>  Mon, 04 Feb 2013 15:36:01 -0500

Blog 1.3.0
