@@ -2,7 +2,7 @@
 <!DOCTYPE component PUBLIC "SYSTEM" "http://corepl.us/api/2_4/component.dtd">
 <component xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.4.5" name="Blog" execmode="web">
 	<requires>
-		<require name="core" type="component" version="2.5.6" operation="ge"/>
+		<require name="core" type="component" version="2.5.7" operation="ge"/>
 		<require name="user" type="component" version="2.4.1"/>
 		<require name="tags" type="component"/>
 		<require name="JQuery-Full" type="component" version="1.9"/>
@@ -11,8 +11,8 @@
 		<permission key="blog_manage" description="Manage Blogs"/>
 	</permissions>
 	<files>
-		<file filename="CHANGELOG" md5="801438555592611508b55cae8bb5dd47"/>
-		<file filename="controllers/BlogController.php" md5="d1b8b94cc7828066f790ca282a25dce9">
+		<file filename="CHANGELOG" md5="5bc5ffd98cc219b8fdf8d5c745d361fe"/>
+		<file filename="controllers/BlogController.php" md5="92bda4c8b1564ddabe1981a8c84fd054">
 			<controller name="BlogController"/>
 		</file>
 		<file filename="helpers/BlogHelper.php" md5="6f1d99f749b165fd0f6cc17e13d55625">
@@ -40,8 +40,8 @@
 	<view searchdir="templates">
 		<file filename="templates/pages/blog/admin.tpl" md5="ca665d689f267200349fcef29350b8bc"/>
 		<file filename="templates/pages/blog/admin_view.tpl" md5="21b2ec9bd612ddd8bb2aa9d50a25aa8d"/>
-		<file filename="templates/pages/blog/article_create_update.tpl" md5="8987b7747088a99fd8ec5b9b20cca665"/>
-		<file filename="templates/pages/blog/article_view.tpl" md5="6b716f77de3706d89d3ccc8b4046ba8a"/>
+		<file filename="templates/pages/blog/article_create_update.tpl" md5="843616082c6990b3d75dded8e08d9025"/>
+		<file filename="templates/pages/blog/article_view.tpl" md5="3c889e24656e3f1da8bf59e13c8f5dd5"/>
 		<file filename="templates/pages/blog/article_view/review-post.tpl" md5="4f09567bf26232ec2f525f6d9ad5d154"/>
 		<file filename="templates/pages/blog/create.tpl" md5="6795037bf2dc9bde8b4043b07839db46"/>
 		<file filename="templates/pages/blog/editindex.tpl" md5="6795037bf2dc9bde8b4043b07839db46"/>
