@@ -2,8 +2,9 @@ Blog 1.4.5
 
 	* [Bug] Fixed the facebook integration for existing articles.  This was broken for articles that were
 	  created as draft and later set to published.
+	* [Feature] Implement the new Core parse_html function to preprocess images for blog posts.
 	* Merged the create and update templates together for sake of reducing code duplication.
-	-- Charlie Powell <charlie@eval.bz>  Sun, 09 Jun 2013 17:19:47 -0400
+	-- Charlie Powell <charlie@eval.bz>  Tue, 11 Jun 2013 12:26:33 -0400
 
 Blog 1.4.4
 
